--- a/style.css
+++ b/style.css
@@ -53,12 +53,15 @@ nav{
     url(img/bangladesh6.jpg);
     background-size: cover;
     background-position: center;
-    display: flex;
+    /* display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center; */
 }
 
 .hero-img {
+    float: left;
+    margin-top: 80px;
+    margin-right: 30px;
     width: 300px;
     height: auto;
     margin-left: 130px;
