--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     margin: 0px;
     padding: 0px;
 }
+body {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.722), rgba(0, 0, 0, 0.929)),
+    url(img/bangladesh9.jpg);
+    background-size: cover;
+}
+
 ::selection {
     color: green;
     background: black;
@@ -49,13 +55,6 @@ nav{
 .hero {
     width: 100%;
     height: 88vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.922), rgba(0, 0, 0, 0.929)),
-    url(img/bangladesh6.jpg);
-    background-size: cover;
-    background-position: center;
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center; */
 }
 
 .hero-img {
