--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -4,7 +4,7 @@
 }
 body {
     min-height: 100vh;
-    background-image: linear-gradient(rgba(209, 209, 209, 0.722), rgba(158, 156, 156, 0.929)), url(img/bangladesh2.jpg);
+    background-image: linear-gradient(rgba(209, 209, 209, 0.722), rgba(158, 156, 156, 0.929));
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
