--- a/Gallery/gallery.css
+++ b/Gallery/gallery.css
@@ -45,7 +45,7 @@ nav a {
 nav a:hover, 
 nav a.active {
     color: white;
-    background-color: hsla(0, 0%, 0%, 0.591);
+    background-color: hsla(0, 0%, 57%, 0.959);;
 }
 
 #nav-logo img{
