--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ nav li:first-child {
 
 .hero-container p {
     display: inline;
+    font-size: 3rem;
     color: rgb(0, 0, 0);
 }
 
@@ -244,8 +245,6 @@ aside a {
         margin-right: 10px;
     }
 }
-
-
 
 
 
